name:                ratelimit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bergey/ratelimit#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.ong
copyright:           2018 Daniel Bergey
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ratelimit
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , clock
                     , text